--- a/public/index.html
+++ b/public/index.html
@@ -41,4 +41,7 @@
     -->
   </body>
 </html>
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+<link
+  href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+  rel="stylesheet"
+/>
